# goal_tracker

./: .gitignore  Cargo.toml  README.md
resources/: load_test.csv  requirements.txt  save_test.csv  test.csv  weekly_test.csv
src/: application.rs  common_enums.rs  create_goal_page_widget.rs  edit_goal_page_widget.rs  edit_goal_widget.rs  goal_page_widget.rs  goal_widget.rs  goals.rs  main.rs  template.rs  tool_bar_widget.rs
