[package]
name = "goal_tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
bitflags = "1.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
nfd = "0.0.4"